--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,11 @@
   </head>
   <body>
     <section class="page-header">
-      <a href="/" style="color: white;"><h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1></a>
+      <a href="/writings" style="color: white;"><h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1></a>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       
-        <a href="/about/" class="btn">about</a>
-        <a href="/projects/" class="btn">projects</a>
+        <a href="/writings/about/" class="btn">about</a>
+        <a href="/writings/projects/" class="btn">projects</a>
       
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
